--- a/19CLC2_Group01_WebApp/views/vwAccount/changePassword.hbs
+++ b/19CLC2_Group01_WebApp/views/vwAccount/changePassword.hbs
@@ -103,6 +103,11 @@
                 width: 0;
             }
         }
+        @media only screen and (max-width: 768px){
+            .padding{
+                padding: 18px;
+            }
+        }
     </style>
 {{/section}}
 <div class="container-fluid">
@@ -123,7 +128,7 @@
         <div class="row justify-content-center">
             <form method="POST" id="ChangPassword">
                 <div class="user-details">
-                    <div class="card" style="align-items: center; border-color: #0b409c; border-radius: 10px;">
+                    <div class="card padding" style="align-items: center; border-color: #0b409c; border-radius: 10px;">
                         <div class="input-box">
                             <i class="fa fa-lock"></i>
                             <input type="password" placeholder="Mật khẩu cũ" name="oldPassword" id = "oldPassword" required>
