--- a/19CLC2_Group01_WebApp/views/vwBidder/upgrade.hbs
+++ b/19CLC2_Group01_WebApp/views/vwBidder/upgrade.hbs
@@ -22,7 +22,7 @@
 
 {{#if view}}
     <div class="container-rm">
-        <div class="content ml-3">
+        <div class="content ml-3 mr-3">
             <h1 class="heading h2 text-center">Điều khoản và Quy Định</h1>
             <p class="description" style="text-decoration: underline;">Các lưu ý từ người bán nâng cấp thành người mua:</p>
             <ol class="detail">
@@ -38,7 +38,7 @@
                 <li>Người bán cần giao sản phẩm đúng với thông tin đã đấu giá.</li>
                 <li>Người bán khi nhận tiền từ người mua thì cần kiểm tra kĩ lưỡng để bảo vệ quyền lợi cá nhân.</li>
             </ol>
-            <p class="description">Để là một người bán vĩnh viễn, người dùng cần đăng ký tài khoản premium thay vì sử dụng tính năng này để bán trong 7 ngày. Các trường hợp vi phạm quy định sẽ bị xóa tài khoản bởi hệ thống theo các cấp độ khác nhau</p>
+            <p class="description">Các trường hợp vi phạm quy định sẽ bị xóa tài khoản bởi hệ thống theo các cấp độ khác nhau</p>
             <form action="/bidder/send-request" method="post">
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" name="isAccept">
