--- a/19CLC2_Group01_WebApp/views/vwProducts/detail.hbs
+++ b/19CLC2_Group01_WebApp/views/vwProducts/detail.hbs
@@ -42,6 +42,20 @@
             background-color: #c91e18;
             color: white;
         }
+
+        .responsive-display-navbar{
+            display: none;
+        }
+
+        @media only screen and (max-width: 768px){
+            .responsive-display-navbar{
+                display: flex;
+            }
+
+            .responsive-display-card{
+                display: none;
+            }
+        }
     </style>
 {{/section}}
 {{#section 'js'}}
@@ -61,7 +75,248 @@
     </script>
 {{/section}}
 <div class="card">
-    <h4 class="card-header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow responsive-display-navbar"
+         style="border-radius: 10px">
+        {{this.product.ProName}}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFeature1"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarFeature1">
+            <ul class="navbar-nav">
+                <div class="list-group list-group-root well mb-2">
+                    {{#if this.auth}}
+                        {{#if this.actorAdmin}}
+                            <form action="/admin/products/delView?id={{this.product.ProID}}" method="post">
+                            <input type="hidden" name="ProID" value={{this.product.ProID}}>
+                            <button class="btn btn-outline-danger mt-2" style="width: 97%" type="submit">
+                                <i class="fa fa-trash"></i>
+                                Xóa
+                            </button>
+                            </form>
+                        {{/if}}
+                    {{/if}}
+                </div>
+                {{#if auth}}
+                    {{#if this.hasWinner}}
+                        {{#if this.product.isActive}}
+                            <div class="mr-lg-5 mb-2">
+                                <form action="/products/delWatchList" method="post">
+                                    <input type="hidden" name="ProID" value={{this.product.ProID}}>
+                                    <button class="btn btn-danger" style="width: 97%" type="submit">
+                                        <i class="fa fa-heart-o">  Yêu thích</i>
+                                    </button>
+                                </form>
+                            </div>
+                        {{else}}
+                            <div class="mr-2 mb-2">
+                                <form action="/products/addWatchList" method="post">
+                                    <input type="hidden" name="ProID" value={{this.product.ProID}}>
+                                    <input type="hidden" name="ProStatus" value="detail">
+                                    <button class="btn btn-outline-danger" style="width: 100%" type="submit">
+                                        <i class="fa fa-heart-o">   Yêu thích</i>
+                                    </button>
+                                </form>
+                            </div>
+                        {{/if}}
+                    {{/if}}
+                {{/if}}
+                <div class="mr-2 mb-2">
+                    <a class="btn btn-outline-info" style="width: 100%" href="/products/history?ProID={{this.product.ProID}}" role="button">
+                    <i class="fa fa-history" aria-hidden="true"></i>
+                    Lịch sử đấu giá
+                    </a>
+                </div>
+                {{#if auth}}
+                    {{#if isOwner}}
+                    {{else}}
+                        <button type="button" class="btn btn-outline-warning mr-2 mb-2" data-toggle="modal" data-target="#exampleModal22" data-whatever="@mdo">
+                            <i class="fa fa-gavel"></i>
+                            Đấu giá
+                        </button>
+
+                        <button type="button" class="btn btn-outline-success mr-2" data-toggle="modal" data-target="#BuyNowModal22" data-whatever="@mdo">
+                            <i class="fa fa-shopping-cart"></i>
+                            Mua ngay
+                        </button>
+
+                        <div class="modal fade" id="exampleModal22" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-danger" id="exampleModalLabel">Đấu giá</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {{#if this.userInfo.NotShow}}
+                                        {{#if this.userInfo.Message}}
+                                            <div class="modal-body">
+                                                Phiên đấu giá đã kết thúc
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                            </div>
+                                        {{else}}
+                                            <div class="modal-body">
+                                                Tài khoản không được phép đấu giá sản phẩm này.
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                            </div>
+                                        {{/if}}
+                                    {{else}}
+                                        {{#if this.userInfo.Auction}}
+                                            <div class="modal-body">
+                                                <form id="myform3" method="post" action="/products/auction/{{this.product.ProID}}">
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Ra giá</label>
+                                                        <input type="number" step={{this.product.StepPrice}} min={{this.product.CurrentPrice}} max={{this.product.PriceBuyNow}} class="form-control" id="recipient-name" name="txtPrice" value="{{this.product.CurrentPrice}}">
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal222" data-dismiss="modal">Gửi yêu cầu</button>
+                                            </div>
+                                        {{else}}
+                                            {{#if this.userInfo.Show}}
+                                                <div class="modal-body">
+                                                    <form id="myform3" method="post" action="/products/auction/{{this.product.ProID}}">
+                                                        Tài khoản hiện không đủ điều kiện đấu giá. Để tiếp tục đấu giá, bạn cần gửi yêu cầu cho người bán
+                                                        <input type="hidden" name="txtRequest" value="1">
+                                                    </form>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                                    <button type="submit" form="myform1" class="btn btn-primary">Gửi yêu cầu</button>
+                                                </div>
+                                            {{else}}
+                                                <div class="modal-body">
+                                                    Yêu cầu đã được gửi. Vui lòng chờ người bán chấp nhận.
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                                </div>
+                                            {{/if}}
+                                        {{/if}}
+                                    {{/if}}
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="BuyNowModal22" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-danger" id="exampleModalLabel">Mua ngay</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {{#if this.userInfo.NotShow}}
+                                        {{#if this.userInfo.Message}}
+                                            <div class="modal-body">
+                                                Phiên đấu giá đã kết thúc
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                            </div>
+                                        {{else}}
+                                            <div class="modal-body">
+                                                Tài khoản không được phép đấu giá sản phẩm này.
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                            </div>
+                                        {{/if}}
+                                    {{else}}
+                                        {{#if this.userInfo.Auction}}
+                                            <div class="modal-body">
+                                                <form id="myform4" method="post" action="/products/auction/{{this.product.ProID}}">
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Giá mua ngay</label>
+                                                        <input type="text" class="form-control" id="recipient-name" name="txtPrice" value="{{this.product.PriceBuyNow}}" readonly>
+                                                        <input type="hidden" value="1" name="txtBuyNow">
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal333" data-dismiss="modal">Gửi yêu cầu</button>
+                                            </div>
+                                        {{else}}
+                                            {{#if this.userInfo.Show}}
+                                                <div class="modal-body">
+                                                    <form id="myform4" method="post" action="/products/auction/{{this.product.ProID}}">
+                                                        Tài khoản hiện không đủ điều kiện đấu giá. Để tiếp tục đấu giá, bạn cần gửi yêu cầu cho người bán
+                                                        <input type="hidden" name="txtRequest" value="1">
+                                                    </form>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                                    <button type="submit" form="myform2" class="btn btn-primary">Gửi yêu cầu</button>
+                                                </div>
+                                            {{else}}
+                                                <div class="modal-body">
+                                                    Yêu cầu đã được gửi. Vui lòng chờ người bán chấp nhận.
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                                </div>
+                                            {{/if}}
+                                        {{/if}}
+                                    {{/if}}
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="exampleModal222" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-danger" id="exampleModalLabel">Xác nhận</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Bạn có chắc chắn với lần ra giá này không?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Từ chối</button>
+                                        <button type="submit" form="myform3" class="btn btn-primary">Đồng ý</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="exampleModal333" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-danger" id="exampleModalLabel">Xác nhận</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Bạn có chắc chắn với lần ra giá này không?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Từ chối</button>
+                                        <button type="submit" form="myform4" class="btn btn-primary">Đồng ý</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {{/if}}
+                {{/if}}
+            </ul>
+        </div>
+    </nav>
+    <h4 class="card-header responsive-display-card">
         {{this.product.ProName}}
         <div class="float-right">
             {{#if this.auth}}
@@ -234,7 +489,7 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                                            <button type="submit" form="myform2" class="btn btn-primary">Gửi</button>
+                                            <button type="submit" form="myform2" class="btn btn-primary">Gửi yêu cầu</button>
                                         </div>
                                     {{else}}
                                         <div class="modal-body">
@@ -341,7 +596,7 @@
                                     <div class="float-right">
                                         <form action="/products/denyRequest?ProID={{../this.proID}}&UserID={{UserID}}" method="post">
                                             {{#if ../this.hasWinner}}
-                                                <button class="btn btn-outline-danger">
+                                                <button {{#if Status}}class="btn btn-outline-danger"{{else}}class="btn btn-danger"disabled="disabled"{{/if}} >
                                                     <i class="fa fa-trash-o"></i>
                                                 </button>
                                             {{else}}
