--- a/19CLC2_Group01_WebApp/views/vwProducts/watchList.hbs
+++ b/19CLC2_Group01_WebApp/views/vwProducts/watchList.hbs
@@ -98,10 +98,10 @@
                                 </a>
 
                                 <!--Khang: Del from watch list-->
-                                <div class="float-right bg-danger">
+                                <div class="float-right">
                                     <form action="/products/delWatchList" method="post">
                                         <input type="hidden" name="ProID" value={{ProID}}>
-                                        <button class="btn btn-outline-danger" type="submit">
+                                        <button class="btn btn-danger" type="submit">
                                             <i class="fa fa-heart-o text-light"></i>
                                         </button>
                                     </form>
