--- a/19CLC2_Group01_WebApp/views/vwSeller/productsSold.hbs
+++ b/19CLC2_Group01_WebApp/views/vwSeller/productsSold.hbs
@@ -85,7 +85,8 @@
                         </div>
                         <div class="col-sm-8">
                             <p style="font-size: 23px"> <span>Tên sản phẩm:</span> <span style="font-weight: bold; color: darkorange"> {{ProName}}</span></p>
-                            <p> <span> <i class="fa fa-clock-o"></i> Ngày đăng:</span> <span style="font-weight: bold; color: #1a8257">{{formatDate UploadDate}}</span> <span class="ml-3"><i class="fa fa-clock-o"></i> Ngày hết hạn:</span> <span style="font-weight: bold; color: #1a8257">{{formatDate EndDate}}</span> </p>
+                            <p> <span> <i class="fa fa-clock-o"></i> Ngày đăng:</span> <span style="font-weight: bold; color: #1a8257">{{formatDate UploadDate}}</span></p>
+                            <p> <span><i class="fa fa-clock-o"></i> Ngày hết hạn:</span> <span style="font-weight: bold; color: #1a8257">{{formatDate EndDate}}</span></p>
                             <p> <span><i class="fa fa-user-circle-o"></i> Người mua:</span> <span style="font-weight: bold; color: #c42e23">{{highestBidder}}</span></p>
                             <p> <span><i class="fa fa-money"></i> Giá mua:</span> <span style="font-weight: bold; color: #c42e23">{{format_number CurrentPrice}}</span></p>
                             <div>
@@ -123,6 +124,7 @@
                                 {{else}}
                                     <p>Người mua chưa đưa ra đánh giá / nhận xét.</p>
                                 {{/if}}
+                                <hr>
                             </div>
                         </div>
                     </div>
